--- a/index.html
+++ b/index.html
@@ -7,10 +7,19 @@
   <title>ZeroDumb HQ</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="icon" href="https://fav.farm/💀" />
+  <style>
+    body {
+      background-color: #0f0f0f;
+      color: #e0e0e0;
+    }
+    a {
+      text-decoration: none;
+    }
+  </style>
 </head>
-<body class="bg-gray-950 text-gray-100 font-sans min-h-screen flex flex-col items-center justify-center">
+<body class="font-sans min-h-screen flex flex-col items-center justify-center">
   <div class="text-center max-w-xl px-4">
-    <h1 class="text-4xl sm:text-5xl font-bold mb-4">ZeroDumb</h1>
+    <h1 class="text-4xl sm:text-5xl font-bold mb-4 text-white">ZeroDumb</h1>
     <p class="text-gray-400 mb-8">Exploring the edge of ethical hacking, one questionable decision at a time.</p>
 
     <div class="space-y-3">
