--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link rel="icon" href="https://fav.farm/💀" />
   <style>
+    #loading-screen {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      background: black;
+      color: #00FF00;
+      font-family: 'JetBrains Mono', monospace;
+      font-size: 1.25rem;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+      flex-direction: column;
+    }
+    #main-content {
+      opacity: 0;
+      transition: opacity 1s ease;
+    }
     body {
       background-color: #0f0f0f;
       color: #e0e0e0;
@@ -45,30 +63,67 @@
     }
   </style>
 </head>
+
 <body class="flex flex-col items-center justify-center min-h-screen px-4">
-  <div class="terminal-window">
-    <div class="terminal-header">
-      <div class="terminal-dot"></div>
-      <div class="terminal-dot"></div>
-      <div class="terminal-dot"></div>
-    </div>
-
-    <div class="text-gray-300 mb-6">
-      <p><span class="text-green-400">zerodumb@hq:</span><span class="text-blue-400">~</span>$ cat welcome.txt</p>
-      <p>Welcome to ZeroDumb HQ</p>
-      <p>Exploring the frontier of ethical hacking, recon, and digital responsibility.</p>
-    </div>
-
-    <div class="text-gray-300 mb-6">
-      <p><span class="text-green-400">zerodumb@hq:</span><span class="text-blue-400">~</span>$ ls -l /</p>
-      <ul class="list-none mt-2 space-y-2">
-        <li><a href="https://zerodumb.dev" class="text-indigo-400 hover:text-indigo-300">📜 Ethics Journal (Blog)</a></li>
-        <li><a href="https://github.com/ZeroDumb/recon-toolkit" class="text-green-400 hover:text-green-300">🛠 Recon Toolkit</a></li>
-        <li><a href="https://github.com/ZeroDumb/seven-sisters" class="text-blue-400 hover:text-blue-300">🧠 Seven Sisters Framework</a></li>
-      </ul>
-    </div>
-
-    <p class="text-sm text-gray-500 mt-8">Built by <strong>Zero</strong>. Contact: <a href="mailto:zero@zerodumb.dev" class="underline hover:text-white">zero@zerodumb.dev</a></p>
+  <!-- Loading screen (separate) -->
+  <div id="loading-screen">
+    <p id="loading-text">Decrypting...</p>
   </div>
+
+  <!-- Main real page -->
+  <div id="main-content">
+    <div class="terminal-window">
+      <div class="terminal-header">
+        <div class="terminal-dot"></div>
+        <div class="terminal-dot"></div>
+        <div class="terminal-dot"></div>
+      </div>
+
+      <div class="text-gray-300 mb-6">
+        <p><span class="text-green-400">zerodumb@hq:</span><span class="text-blue-400">~</span>$ cat welcome.txt</p>
+        <p>Welcome to ZeroDumb HQ</p>
+        <p>Exploring the frontier of ethical hacking, recon, and digital responsibility.</p>
+      </div>
+
+      <div class="text-gray-300 mb-6">
+        <p><span class="text-green-400">zerodumb@hq:</span><span class="text-blue-400">~</span>$ ls -l /</p>
+        <ul class="list-none mt-2 space-y-2">
+          <li><a href="https://zerodumb.dev" class="text-indigo-400 hover:text-indigo-300">📜 Ethics Journal (Blog)</a></li>
+          <li><a href="https://github.com/ZeroDumb/recon-toolkit" class="text-green-400 hover:text-green-300">🛠 Recon Toolkit</a></li>
+          <li><a href="https://github.com/ZeroDumb/seven-sisters" class="text-blue-400 hover:text-blue-300">🧠 Seven Sisters Framework</a></li>
+        </ul>
+      </div>
+
+      <p class="text-sm text-gray-500 mt-8">
+        Built by <strong>Zero</strong>. Contact: 
+        <a href="mailto:zero@zerodumb.dev" class="underline hover:text-white">zero@zerodumb.dev</a>
+      </p>
+    </div>
+  </div>
+
+  <script>
+    const loadingText = document.getElementById('loading-text');
+    const chars = 'abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789!@#$%^&*()';
+
+    function randomString(length) {
+      let result = '';
+      for (let i = 0; i < length; i++) {
+        result += chars.charAt(Math.floor(Math.random() * chars.length));
+      }
+      return result;
+    }
+
+    let interval = setInterval(() => {
+      loadingText.innerText = randomString(24);
+    }, 100);
+
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        clearInterval(interval);
+        document.getElementById('loading-screen').style.display = 'none';
+        document.getElementById('main-content').style.opacity = '1';
+      }, 2500);
+    });
+  </script>
 </body>
 </html>
