--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p><span class="text-green-400">zerodumb@hq:</span><span class="text-blue-400">~</span>$ ls -l /</p>
         <ul class="list-none mt-2 space-y-2">
           <li><a href="https://zerodumb.dev" class="text-indigo-400 hover:text-indigo-300">📜 Ethics Journal (Blog)</a></li>
-          <li><a href="https://github.com/ZeroDumb/recon-toolkit" class="text-green-400 hover:text-green-300">🛠 Recon Toolkit</a></li>
+          <li><a href="https://github.com/ZeroDumb/recon-toolkit" class="text-yellow-400 hover:text-yellow-300">🗃️ Recon Toolkit</a></li>
           <li><a href="https://github.com/ZeroDumb/seven-sisters" class="text-blue-400 hover:text-blue-300">🧠 Seven Sisters Framework</a></li>
         </ul>
       </div>
