--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         <ul class="list-none mt-2 space-y-2">
           <li><a href="https://zerodumb.dev" class="text-indigo-400 hover:text-indigo-300">📜 Ethics Journal (Blog)</a></li>
           <li><a href="https://github.com/ZeroDumb/recon-toolkit" class="text-yellow-400 hover:text-yellow-300">🗃️ Recon Toolkit</a></li>
+          <li><a href="https://zerodumb.dev/services" class="text-yellow-400 hover:text-yellow-300">📂 Services</a></li>
           <li><a href="https://github.com/ZeroDumb/seven-sisters" class="text-blue-400 hover:text-blue-300">🧠 The 7-Sisters Framework</a></li>
           <li><a href="https://x.com/zerodumb_dev" class="text-white-400 hover:text-white-300">𝕏  @zerodumb_dev</a></li>
         </ul>
