--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <li><a href="https://github.com/ZeroDumb/seven-sisters" class="text-blue-400 hover:text-blue-300">🧠 The 7-Sisters Framework</a></li>
           <li><a href="https://github.com/ZeroDumb/Z3d0tchi" class="text-purple-400 hover:text-purple-300">💽 Project Pwny</a></li>
           <li><a href="https://x.com/zerodumb_dev" class="text-white-400 hover:text-white-300">𝕏  @zerodumb_dev</a></li>
-          <li><a href="https://buymeacoffee.com/iamnotaskid" class="text-brown-400 hover:text-brown-300">☕  iamnotaskid</a></li>
+          <li><a href="https://buymeacoffee.com/iamnotaskid" class="text-red-400 hover:text-red-300">☕  iamnotaskid</a></li>
         </ul>
       </div>
 
